# sandpiles-yew

./: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
public/: index.html
src/: app.rs  lib.rs  props.rs
src/app/: mod.rs
src/components/: heading.rs  mod.rs  page.rs
src/components/sandpiles/: cell.rs  mod.rs
src/components/sandpiles/sim/: cell.rs  cell_grid.rs  mod.rs
