[package]
name = "hello-yew-v0_17"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"

[dependencies.yew]
version = "0.17.2"
git = "https://github.com/Noah2610/yew"
branch = "custom"

[dev-dependencies]
wasm-pack = "0.9.1"
